[gd_scene load_steps=14 format=3 uid="uid://ci21h02bkhjg8"]

[ext_resource type="Script" path="res://Scripts/pet/onyx_demon_small.gd" id="1_3cl8h"]
[ext_resource type="Texture2D" uid="uid://ds6g4q1uh4yhu" path="res://Assets/Sprites/pets/small_onyx_demon.png" id="2_dstts"]

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_1usde"]
parameter_name = "tint"
default_value_enabled = true

[sub_resource type="VisualShaderNodeBooleanParameter" id="VisualShaderNodeBooleanParameter_0bbl4"]
parameter_name = "enabled"
default_value_enabled = true

[sub_resource type="VisualShaderNodeIf" id="VisualShaderNodeIf_mj86h"]
default_input_values = [0, 0.0, 1, 1.0, 2, 1e-05, 3, Vector3(0, 0, 0), 4, Vector3(0, 0, 0), 5, Vector3(0, 0, 0)]

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_3k7k7"]
input_name = "color"

[sub_resource type="VisualShader" id="VisualShader_umxg4"]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform bool enabled = false;
uniform vec4 tint : source_color = vec4(1.000000, 1.000000, 1.000000, 1.000000);



void fragment() {
// BooleanParameter:3
	bool n_out3p0 = enabled;


// ColorParameter:2
	vec4 n_out2p0 = tint;


// Input:5
	vec4 n_out5p0 = COLOR;


	vec3 n_out4p0;
// If:4
	float n_in4p1 = 1.00000;
	float n_in4p2 = 0.00001;
	if(abs((n_out3p0 ? 1.0 : 0.0) - n_in4p1) < n_in4p2)
	{
		n_out4p0 = vec3(n_out2p0.xyz);
	}
	else if((n_out3p0 ? 1.0 : 0.0) < n_in4p1)
	{
		n_out4p0 = vec3(n_out5p0.xyz);
	}
	else
	{
		n_out4p0 = vec3(n_out5p0.xyz);
	}


// Output:0
	COLOR.rgb = n_out4p0;


}
"
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2(520, 260)
nodes/fragment/2/node = SubResource("VisualShaderNodeColorParameter_1usde")
nodes/fragment/2/position = Vector2(-480, 360)
nodes/fragment/3/node = SubResource("VisualShaderNodeBooleanParameter_0bbl4")
nodes/fragment/3/position = Vector2(-480, 140)
nodes/fragment/4/node = SubResource("VisualShaderNodeIf_mj86h")
nodes/fragment/4/position = Vector2(200, 280)
nodes/fragment/5/node = SubResource("VisualShaderNodeInput_3k7k7")
nodes/fragment/5/position = Vector2(-220, 560)
nodes/fragment/connections = PackedInt32Array(3, 0, 4, 0, 2, 0, 4, 3, 4, 0, 0, 0, 5, 0, 4, 4, 5, 0, 4, 5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8as0q"]
shader = SubResource("VisualShader_umxg4")
shader_parameter/enabled = false
shader_parameter/tint = Color(0.752941, 0.819608, 0.8, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_hq6p8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dstts")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7uyc8"]
radius = 6.0

[sub_resource type="Animation" id="Animation_ly7xv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5mjcq"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4hf0x"]
_data = {
"RESET": SubResource("Animation_ly7xv"),
"hit_flash": SubResource("Animation_5mjcq")
}

[node name="onyx_demon_small" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_3cl8h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_8as0q")
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_hq6p8")
autoplay = "default"

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7uyc8")

[node name="enter_sound" type="AudioStreamPlayer2D" parent="."]
bus = &"Sound Effect"

[node name="hit_sound" type="AudioStreamPlayer2D" parent="."]
volume_db = 5.0
bus = &"Sound Effect"

[node name="attack_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Hit_Flash_animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4hf0x")
}

[node name="hit_flash_animation_timer" type="Timer" parent="Hit_Flash_animation_player"]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Hit_Flash_animation_player/hit_flash_animation_timer" to="." method="_on_hit_flash_animation_timer_timeout"]
